<resources>
    <string name="app_name">EventManagementAndroidApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="photo">Photo</string>
    <string name="create_user">Create User</string>
    <string name="emailHint">xxx@email.com</string>
    <string name="idHint">A001</string>
    <string name="addressHint">24,Jalan SS24, Petaling Jaya, Selangor</string>
    <string name="verification_code">Verification Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="delete">delete</string>
    <string name="reset">Reset</string>
    <string name="unblock">unblock</string>
    <string name="address">Address</string>
    <string name="please_provide_your_email_address">Please provide your email address</string>
    <string name="pleases_enter_your_verification_code">Pleases enter your verification code</string>
    <string name="submit">Submit</string>
    <string name="id">ID</string>
    <string name="edit">Edit</string>
    <string name="update">update</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="staff_management">Staff Management</string>
    <string name="welcome_msg">Event Management System</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send">Send</string>
    <string name="verify">Verify</string>
    <string name="forget_password">Forget Password</string>
    <string name="status">Status</string>
    <string name="Phone">Phone</string>
    <string name="location">Location</string>
    <string name="price">Price(RM)</string>
    <string name="create_event">New Event</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="voucher_code">Voucher Code</string>

</resources>