<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".staff_management.CreateStaffFragment">

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="139dp"
        android:layout_height="133dp"
        android:layout_marginEnd="140dp"
        android:background="#CCC"
        android:cropToPadding="true"
        android:importantForAccessibility="no"
        android:padding="1dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/hgl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.38"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/photo"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgPhoto"
        app:layout_constraintEnd_toStartOf="@+id/imgPhoto"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/imgPhoto"
        app:layout_constraintVertical_bias="0.517" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtName"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/edtName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtEmail"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/edtEmail"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/edtPassword" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/role"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/spRole"
        app:layout_constraintStart_toEndOf="@+id/edtId"
        app:layout_constraintTop_toTopOf="@+id/spRole"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtId"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/idHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="32dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/hgl"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:minHeight="32dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/edtId"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/emailHint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="32dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="32dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edtAddress"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_user"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/button_colour"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:layout_constraintVertical_bias="0.421"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_colour"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toEndOf="@+id/btnSubmit"
        app:layout_constraintTop_toTopOf="@+id/btnSubmit"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtId"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/edtId" />

    <Spinner
        android:id="@+id/spRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Roles"
        app:layout_constraintBottom_toBottomOf="@+id/edtId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/edtId"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hgl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="225dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="@+id/edtAddress"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/edtAddress" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="285dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/addressHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="79dp" />

</androidx.constraintlayout.widget.ConstraintLayout>