<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:enabled="false">
        <item
            android:id="@+id/eventManagementFragment2"
            android:checkable="true"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
    </group>
    <group android:id="@+id/group2" >
        <item
            android:id="@+id/staffProfileFragment"
            android:checkable="true"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/userProfileFragment"
            android:checkable="true"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/staffManagementFragment"
            android:checkable="true"
            android:icon="@drawable/ic_staff"
            android:title="@string/staff_management" />
    </group>
    <group >
        <item
            android:id="@+id/eventManagementFragment2"
            android:checkable="true"
            android:icon="@drawable/ic_event"
            android:title="Event Management" />
        <item
            android:id="@+id/voucherFragment"
            android:checkable="true"
            android:icon="@drawable/ic_voucher"
            android:title="Voucher" />
        <item
            android:id="@+id/QRScannerFragment"
            android:checkable="true"
            android:icon="@drawable/ic_qrscan"
            android:title="Attendee Management" />
        <item
            android:id="@+id/liveChatFragment"
            android:checkable="true"
            android:icon="@drawable/ic_chat"
            android:title="Customer Service" />
        <item
            android:id="@+id/invitationFragment"
            android:icon="@drawable/ic_invite"
            android:title="Invitation" />
        <item
            android:id="@+id/paymentAcknowledgeFragment"
            android:icon="@drawable/ic_paymentack"
            android:title="Payment Acknowledgement" />
        <item
            android:id="@+id/feedbackFragment"
            android:checkable="true"
            android:icon="@drawable/ic_feedback"
            android:title="Feedback" />
        <item
            android:id="@+id/faqFragment"
            android:checkable="true"
            android:icon="@drawable/ic_faq"
            android:title="FAQ" />
        <item
            android:id="@+id/reportFragment"
            android:checkable="true"
            android:icon="@drawable/ic_report"
            android:title="Report" />
    </group>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>