<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".staff_management.EditUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".staff_management.EditUserFragment">


        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#CCC"
            android:cropToPadding="true"
            android:importantForAccessibility="no"
            android:padding="1dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/hgl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="28dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hgl"
            tools:text="A001" />

        <TextView
            android:id="@+id/txtUserRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtId"
            app:layout_constraintStart_toEndOf="@+id/txtId"
            app:layout_constraintTop_toTopOf="@+id/txtId"
            tools:text="Staff" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtId"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_bg"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtName"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="331dp"
            android:layout_height="38dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/addressHint"
            android:inputType="textPostalAddress"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/button_colour"
            android:text="@string/confirm"
            app:layout_constraintStart_toEndOf="@+id/btnReset"
            app:layout_constraintTop_toTopOf="@+id/btnReset"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/button_colour"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="@+id/imgPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imgPhoto"
            app:layout_constraintTop_toTopOf="@+id/imgPhoto"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/button_colour"
            android:text="@string/reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDate"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtAddress"
            tools:text="xx-xx-xxxx" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="112dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUserRole" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="163dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/edtName"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtId"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/edtEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.151"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtName"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/address"
            app:layout_constraintBottom_toTopOf="@+id/edtAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.319"
            app:layout_constraintStart_toEndOf="@+id/edtName"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/id"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtId"
            app:layout_constraintEnd_toStartOf="@+id/txtId"
            app:layout_constraintTop_toTopOf="@+id/txtId" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/role"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtUserRole"
            app:layout_constraintEnd_toStartOf="@+id/txtUserRole"
            app:layout_constraintTop_toTopOf="@+id/txtUserRole" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

